# subsequence

./: .config.el  .gitignore  README.md  api-cheatsheet.md  config.yaml.default  pyproject.toml  pytest.ini  tasks.py
.github/workflows/: build.yaml  docs.yml  publish.yml  tests.yml  type-check.yml
benchmarks/: clock_jitter.py
docs/: README.md  build.sh  index.html  search.js  subsequence.html
examples/: arpeggiator.py  bresenham_poly.py  demo.py  demo_advanced.py  demo_conductor.py  demo_notation.py  emergence.py  frozen.py  iss.py  labyrinth.py  link_sync.py  live_init.py  live_patterns.py  live_single_file.py  load_patterns.py  midi_channels.txt  simple.py  subharmonicon.py
examples/assets/: Swing 16ths 57.agr
sandbox/: .gitignore  README.md
scripts/: check_docstring_markup.py  generate_cheatsheet.py  midi_in_observer.py  simulation_gravity.py  tuner_tone.py
subsequence/: __init__.py  __main__.py  cadences.py  chords.py  composition.py  conductor.py  constants.py  definitions.py  display.py  easing.py  event_emitter.py  form_state.py  forms.py  gm_drums.py  groove.py  harmonic_rhythm.py  harmonic_state.py  harmony.py  held_notes.py  intervals.py  keystroke.py  link_clock.py  live_client.py  live_reloader.py  live_server.py  markov_chain.py  melodic_state.py  midi.py  midi_utils.py  mini_notation.py  motif.py  motifs.py  osc.py  pattern.py  pattern_algorithmic.py  pattern_builder.py  pattern_midi.py  progression.py  progressions.py  roles.py  (+7 more)
subsequence/assets/web/: index.html
subsequence/chord_graphs/: __init__.py  aeolian_minor.py  chromatic_mediant.py  dark_minor.py  dark_techno.py  diminished.py  dorian_minor.py  functional_major.py  hooktheory_major.py  lydian_major.py  mixolydian.py  phrygian_minor.py  suspended.py  turnaround_global.py  whole_tone.py
subsequence/constants/: __init__.py  durations.py  gm_drums.py  midi_cc.py  midi_notes.py  pulses.py  velocity.py
subsequence/constants/instruments/: __init__.py  gm_cc.py  gm_drums.py  gm_instruments.py  roland_tr8s.py  roland_tr8s_drums.py  vermona_drm1_drums.py
subsequence/helpers/: network.py  wing.py
tests/: conftest.py  simulation_gravity.py  test_api_consistency.py  test_cadences.py  test_callback_sequence.py  test_cc_forward.py  test_cc_name_map.py  test_chord_graphs.py  test_chord_quality_registry.py  test_clock_output.py  test_composition.py  test_conductor.py  test_custom_scales.py  test_definitions.py  test_detached.py  test_determinism.py  test_display.py  test_duration.py  test_eased_value.py  test_easing.py  test_event_emitter.py  test_form.py  test_forms.py  test_groove.py  test_harmonic_gravity.py  test_harmony.py  test_harmony_window.py  test_held_notes.py  test_hotkeys.py  test_instrument_drum_maps.py  test_intervals.py  test_key_resolution.py  test_keystroke.py  test_latency_compensation.py  test_legato.py  test_link.py  test_live_reloader.py  test_live_server.py  test_load_patterns.py  test_low_fixes_2026_07.py  (+50 more)
