[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subsequence"
version = "0.1.0"
description = "A generative MIDI sequencer"
readme = "README.md"
authors = [{ name = "Si", email = "si@example.com" }]
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "mido",
    "python-rtmidi",
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
docs = [
    "pdoc>=14.0.0",
]
dev = [
    "mypy>=1.8.0",
]

[project.scripts]
subsequence = "subsequence.__main__:main"

[tool.setuptools.packages.find]
include = ["subsequence*"]

[tool.setuptools.package-data]
subsequence = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = "mido.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rtmidi.*"
ignore_missing_imports = true
