[build-system]
requires = ["setuptools>=77.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subsequence"
dynamic = ["version"]
description = "A generative MIDI sequencer"
readme = "README.md"
authors = [{ name = "Simon Holliday", email = "simon.holliday@protonmail.com" }]
# SPDX expression (PEP 639).  The old table form and the License:: classifier
# are deprecated by setuptools and slated for removal; the classifier is dropped
# because the SPDX string is now the license's single source of truth.
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mido>=1.3",
    "python-rtmidi>=1.5",
    "python-osc>=1.8",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "pymididefs>=0.2.5",
]

[project.urls]
Repository = "https://github.com/simonholliday/subsequence"
Issues = "https://github.com/simonholliday/subsequence/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
docs = [
    "pdoc>=14.0.0",
]
dev = [
    "mypy>=1.8.0",
]
link = [
    "aalink>=0.1.1",
]

[project.scripts]
subsequence = "subsequence.__main__:main"

[tool.setuptools.packages.find]
include = ["subsequence*"]

[tool.setuptools.package-data]
subsequence = ["py.typed", "assets/web/*.html"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = "mido.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rtmidi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[tool.setuptools_scm]
# Enable setuptools_scm to derive version from git tags
